# docs/swagger.json
@@ -8,6 +8,37 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/account/data": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "查询用户数据(super like数量相关)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data",
+                        "schema": {
+                            "$ref": "#/definitions/model.AccountData"
+                        }
+                    }
+                }
+            }
+        },
         "/account/token": {
             "get": {
                 "consumes": [
@@ -17,7 +48,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "全局"
+                    "用户"
                 ],
                 "summary": "获取用户token",
                 "parameters": [
@@ -192,6 +223,110 @@
                 "responses": {}
             }
         },
+        "/project/collect": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "项目"
+                ],
+                "summary": "添加收藏项目",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "项目"
+                ],
+                "summary": "删除收藏项目",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/project/collect/list": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "项目"
+                ],
+                "summary": "收藏列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "maximum": 1000,
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/database.Project"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/project/like": {
             "post": {
                 "consumes": [
@@ -235,6 +370,12 @@
                 ],
                 "summary": "项目列表",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
                     {
                         "maximum": 100,
                         "type": "integer",
@@ -407,11 +548,12 @@
                     "description": "是否提供曝光度",
                     "type": "integer"
                 },
+                "collect": {
+                    "description": "收藏数量",
+                    "type": "integer"
+                },
                 "country": {
                     "description": "国家信息",
-                    "type": "string"
-                },
-                "createdAt": {
                     "type": "string"
                 },
                 "future_development": {
@@ -425,12 +567,16 @@
                 "id": {
                     "type": "integer"
                 },
+                "is_collect": {
+                    "description": "是否收藏",
+                    "type": "boolean"
+                },
                 "like": {
-                    "description": "喜欢",
+                    "description": "喜欢数量",
                     "type": "integer"
                 },
                 "super_like": {
-                    "description": "超级喜欢",
+                    "description": "超级喜欢数量",
                     "type": "integer"
                 },
                 "tg": {
@@ -450,11 +596,8 @@
                     "type": "string"
                 },
                 "un_like": {
-                    "description": "不喜欢",
+                    "description": "不喜欢数量",
                     "type": "integer"
-                },
-                "updatedAt": {
-                    "type": "string"
                 },
                 "video": {
                     "description": "视频URL",
@@ -467,6 +610,19 @@
                 "x": {
                     "description": "项目方的社交媒体信息",
                     "type": "string"
+                }
+            }
+        },
+        "model.AccountData": {
+            "type": "object",
+            "properties": {
+                "available_super_like": {
+                    "description": "可用的super like数量",
+                    "type": "integer"
+                },
+                "total_super_like": {
+                    "description": "总super like数量",
+                    "type": "integer"
                 }
             }
         }
